--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   http: "^0.11.3+16"
+  charts_flutter: ^0.2.0
 
 dev_dependencies:
   flutter_test:
